# hellverdict

./: BUILD.md  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  main.cpp
assets/fonts/: .gitkeep  README.txt
assets/maps/: e1m1.txt  e1m2.txt  e1m3.txt  e1m4.txt  e1m5.txt
assets/shaders/: bill.frag  bill.vert  hud.frag  hud.vert  present.frag  present.vert  sdf_text.frag  sdf_text.vert  world.frag  world.vert
assets/textures/: README.txt
scripts/game/: HellScriptContext.cs  HellVerdict.Scripts.csproj
src/: main.cpp
src/ecs/: components.hpp  ecs_world.cpp  ecs_world.hpp
src/game/: collision.cpp  collision.hpp  enemy.cpp  enemy.hpp  enemy_defs.hpp  hell_game.cpp  hell_game.hpp  map_data.cpp  map_data.hpp  player.cpp  player.hpp  types.hpp
src/render/: texture_cache.cpp  texture_cache.hpp  vk_frame_renderer.cpp  vk_frame_renderer.hpp  vk_pipeline.cpp  vk_pipeline.hpp
src/render/font/: sdf_font.hpp
src/render/sync/: vk_sync.cpp  vk_sync.hpp
src/render/warmup/: sdf_font.cpp  shader_warmup.hpp
src/renderer/: doom_renderer.cpp  doom_renderer.hpp  vk_renderer.cpp  vk_renderer.hpp
src/scripting/: cs_bridge.cpp  cs_bridge.hpp
src/world/: world_map.cpp  world_map.hpp
